fix(locator-page): fix scroll list overflow for small screens

--- a/src/app/global/components_shared/locator_components/dealer-view/dealer-view.component.scss
+++ b/src/app/global/components_shared/locator_components/dealer-view/dealer-view.component.scss
@@ -1,7 +1,7 @@
 .search-result {
   background-color: #fafafa;
-  max-height: 85vh;
-  overflow-y: auto;
+//   max-height: 85vh;
+//   overflow-y: auto;
   padding: 15px;
   margin-top: 8px;
 }
@@ -53,6 +53,8 @@
   z-index: 99;
   width: 400px;
   padding-bottom: 10px;
+  height: 600px;
+  overflow-y: auto;
 }
 
 .search-button {
